--- a/Python_Basics.ipynb
+++ b/Python_Basics.ipynb
@@ -241,6 +241,290 @@
     "else:\n",
     "    print(\"Odd\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Even\n"
+     ]
+    }
+   ],
+   "source": [
+    "store=[\"Even\" if num%2==0 else \"Odd\"]\n",
+    "print(*store)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5) Given list of Tuple print as following\n",
+    "\n",
+    "**Input** : employees=[(101, 'Alice','HR'),(102,'Bob','Engineering'),(103,'Charles','Marketing')]\n",
+    "\n",
+    "**Output** : Enter the Employee ID: 102\n",
+    "Name: Bob   Dept: Engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employees=[(101, 'Alice','HR'),(102,'Bob','Engineering'),(103,'Charles','Marketing')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(101, 'Alice', 'HR'),\n",
+       " (102, 'Bob', 'Engineering'),\n",
+       " (103, 'Charles', 'Marketing')]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the Employee ID: 102\n",
+      "Name: Bob   Dept: Engineering\n"
+     ]
+    }
+   ],
+   "source": [
+    "search_id=int(input(\"Enter the Employee ID: \"))\n",
+    "for emp in employees:\n",
+    "    if search_id ==  emp[0]:\n",
+    "        print(\"Name:\",emp[1],\" \",\"Dept:\", emp[2])\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"Not Found , Try again!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Bob   Dept: Engineering\n"
+     ]
+    }
+   ],
+   "source": [
+    "###Do it using Dictionary\n",
+    "\n",
+    "employees={\n",
+    "    101:('Alice', 'HR'),\n",
+    "    102:('Bob', 'Engineering'),\n",
+    "    103:('Charles', 'Marketing')\n",
+    "}\n",
+    "\n",
+    "try:\n",
+    "    if search_id in employees:\n",
+    "        name,dept=employees[search_id]\n",
+    "        print(\"Name:\", name,\" \",\"Dept:\",dept)\n",
+    "except ValueError:\n",
+    "    print(\"Invalid Input\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6) Student grade classification problem . you have a dictionary where student names are keys and thier marks (out 0f 100) are the values. Classify students are:\n",
+    "\n",
+    "### \"Excellent\" (marks) >=90\n",
+    "\n",
+    "### \"Good\" (marks between 70 -89)\n",
+    "\n",
+    "### \"Needs Improvement (marks < 70)\"\n",
+    "\n",
+    "Students={'Alice':92,'Bob':85,'Charles':65}\n",
+    "\n",
+    "**Output Expected**\n",
+    "\n",
+    "{'Alice':'Excellent','Bob':'Good','Charles':'Needs Improvement')}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students={'Alice':92,'Bob':85,'Charles':65}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Alice': 'Excellent', 'Bob': 'Good', 'Charles': 'Needs Improvement'}"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict={}\n",
+    "for key, value in students.items():\n",
+    "    if value >= 90:\n",
+    "        dict[key]=\"Excellent\"\n",
+    "    elif value >70 and value < 89:\n",
+    "        dict[key]=\"Good\"\n",
+    "    elif value < 69:\n",
+    "        dict[key]=\"Needs Improvement\"\n",
+    "dict        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What if I what output like this?\n",
+    "\n",
+    "{'Alice': (92,'Excellent'), 'Bob': (85,'Good'), 'Charles': (65,'Needs Improvement')}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Alice': (92, 'Excellent'),\n",
+       " 'Bob': (85, 'Good'),\n",
+       " 'Charles': (65, 'Needs Improvement')}"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "classified_students={}\n",
+    "for key, value in students.items():\n",
+    "    if value >= 90:\n",
+    "        classification=\"Excellent\"\n",
+    "    elif value >=70 and value <=89:\n",
+    "        classification=\"Good\"\n",
+    "    else:\n",
+    "        classification=\"Needs Improvement\"\n",
+    "\n",
+    "    classified_students[key]=(value, classification)\n",
+    "\n",
+    "classified_students"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
