--- a/Python_Basics.ipynb
+++ b/Python_Basics.ipynb
@@ -457,11 +457,483 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7)  Reverse a Dictionary\n",
+    "\n",
+    "Description:\n",
+    "    \n",
+    "Given a dictionary, create a new dictionary with keys and values swapped.\n",
+    "\n",
+    "**Input:**\n",
+    "\n",
+    "d = {'a': 1, 'b': 2, 'c': 3}\n",
+    "\n",
+    "**Expected Output:**\n",
+    "\n",
+    "{1: 'a', 2: 'b', 3: 'c'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {'a': 1, 'b': 2, 'c': 3}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 'a', 2: 'b', 3: 'c'}"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reversed_d={value : key for key, value in d.items()}\n",
+    "reversed_d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8) Merge Two Dictionaries\n",
+    "\n",
+    "Description:\n",
+    "Given two dictionaries, merge them into one. If the same key exists in both, the value from the second dictionary should overwrite the first.\n",
+    "\n",
+    "**Input**\n",
+    "\n",
+    "d1 = {'a': 1, 'b': 2}\n",
+    "\n",
+    "d2 = {'b': 3, 'c': 4}\n",
+    "\n",
+    "**Expected Output:**\n",
+    "    \n",
+    "{'a': 1, 'b': 3, 'c': 4}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, 'b': 3, 'c': 4}"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merge={**d1,**d2}\n",
+    "merge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9) Count Frequency of Characters in a String\n",
+    "Description:\n",
+    "Write a program that takes a string as input and returns a dictionary with the frequency of each character.\n",
+    "\n",
+    "**Input:**\n",
+    "\n",
+    "s = \"cars\"\n",
+    "\n",
+    "**Expected Output:**\n",
+    "\n",
+    "{'c': 1, 'a': 1, 'r': 1, 's': 1}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cars\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'c': 1, 'a': 1, 'r': 1, 's': 1}"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s=input()\n",
+    "freq={}\n",
+    "\n",
+    "for key in s:\n",
+    "    freq[key]=freq.get(key,0)+1\n",
+    "    \n",
+    "freq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cars\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'c': 1, 'a': 1, 'r': 1, 's': 1})"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "###Alternate Solution\n",
+    "\n",
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "s=input()\n",
+    "freq=Counter(s)\n",
+    "freq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cars\n",
+      "{'c': 1, 'a': 1, 'r': 1, 's': 1}\n",
+      "a:1\n",
+      "c:1\n",
+      "r:1\n",
+      "s:1\n"
+     ]
+    }
+   ],
+   "source": [
+    "### if you want sorted\n",
+    "\n",
+    "s=input()\n",
+    "freq={}\n",
+    "for key in s:\n",
+    "    freq[key]=freq.get(key,0)+1\n",
+    "print(freq)    \n",
+    "for key in sorted(freq):\n",
+    "    print(f'{key}:{freq[key]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10) Group Words by Their First Letter\n",
+    "Description:\n",
+    "Given a list of words, create a dictionary where each key is the first letter of a word and the value is a list of words that start with that letter.\n",
+    "\n",
+    "**Input**\n",
+    "\n",
+    "words = [\"apple\", \"banana\", \"avocado\", \"cherry\", \"blueberry\"]\n",
+    "\n",
+    "**Expected Output**\n",
+    "\n",
+    "\n",
+    "{'a': ['apple', 'avocado'], 'b': ['banana', 'blueberry'], 'c': ['cherry']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freq={}\n",
+    "words = [\"apple\", \"banana\", \"avocado\", \"cherry\", \"blueberry\"]\n",
+    "\n",
+    "for word in words:\n",
+    "    key=word[0].lower()\n",
+    "    if key in freq:\n",
+    "        freq[key].append(word)\n",
+    "    else:\n",
+    "        freq[key]=[word]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': ['apple', 'avocado'], 'b': ['banana', 'blueberry'], 'c': ['cherry']}"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "freq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11) Find the Most Frequent Element in a List\n",
+    "Description:\n",
+    "\n",
+    "Write a program that finds the most frequent element in a list and returns it along with its frequency as a tuple.\n",
+    "\n",
+    "**Input:**\n",
+    "\n",
+    "lst = [1, 3, 2, 3, 4, 3, 2, 1, 3]\n",
+    "\n",
+    "**Expected Output:**\n",
+    "\n",
+    "(3, 4)  # Element 3 appears 4 times."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict ={}\n",
+    "lst = [1, 3, 2, 3, 4, 3, 2, 1, 3]\n",
+    "for key in lst:\n",
+    "    dict[key]=dict.get(key,0)+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 2, 3: 4, 2: 2, 4: 1}"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "most_freq=max(dict, key=dict.get)\n",
+    "    \n",
+    "most_freq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict[most_freq]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(most_freq, dict[most_freq])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Nested Dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d1 = {'a': 1, 'b': {'c': 2}}\n",
+    "d2 = d1.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d2['b']['c'] = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d2['b']['c'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Convert case using lambda and map function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name=['alice','akash','amit']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ALICE', 'AKASH', 'AMIT']"
+      ]
+     },
+     "execution_count": 272,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "upper_name=list(map(lambda x : x.upper(),name))\n",
+    "upper_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Even numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## short names "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## positive numbers "
+   ]
   },
   {
    "cell_type": "code",
@@ -472,52 +944,268 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = (1, [2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b=a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0x7f2cfbf08380'"
+      ]
+     },
+     "execution_count": 278,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hex(id(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0x7f2cfbf08380'"
+      ]
+     },
+     "execution_count": 279,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "hex(id(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[99, 2, 3]\n",
+      "[99, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def tricky_function(lst):\n",
+    "    lst[0] = 99\n",
+    "    lst = lst +[4]\n",
+    "    return lst\n",
+    "\n",
+    "my_list = [1, 2, 3]\n",
+    "new_list = tricky_function(my_list)\n",
+    "print(my_list)\n",
+    "print(new_list)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "my list  99 2 3\n",
+    " new lsit ==> 99 2 3 4"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " \n",
+    "from functools import reduce\n",
+    "nums = [1, 2, 3, 4]\n",
+    "result = reduce(lambda x, y: x*y, nums)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "results=lambda x,y,z,q: x+y+z+q\n",
+    "results(1,2,3,4)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 304,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 304,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results(1,2,3,4)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "b=[x**2 for x in range(4)]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 308,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9]"
+      ]
+     },
+     "execution_count": 308,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lst=[]\n",
+    "for x in range(4):\n",
+    "    lst.append(x**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9]"
+      ]
+     },
+     "execution_count": 320,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The largest string element :  apple\n"
+     ]
+    }
+   ],
+   "source": [
+    " \n",
+    "def large_str(lst):\n",
+    "    largest = lst[0]\n",
+    "    for element in lst:\n",
+    "        if element > largest:\n",
+    "            largest = element\n",
+    "    return largest\n",
+    " \n",
+    "strings = [\"apple\", \"jackfruit\", \"passionfruit\", \"bluecoracoo\"]\n",
+    "largest_string = large_str(strings)\n",
+    "print(\"The largest string element : \", largest_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 338,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 338,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[10,20,30, 70, 60]\n",
+    "len(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 336,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 336,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(\"What is the capital of France?\")"
+   ]
   },
   {
    "cell_type": "code",
