--- a/Python Refresher Assignment.ipynb
+++ b/Python Refresher Assignment.ipynb
@@ -172,35 +172,339 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "Problem Statement:\n",
+    "\n",
+    "What will be the output of the following code to find the GCD of 54 and 24 using Euclidean algorithm?\n",
+    "\n",
+    "def gcd(a, b):\n",
+    "    while b != 0:\n",
+    "        a, b = b, a % b\n",
+    "    return a\n",
+    "\n",
+    "print(gcd(54, 24))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, [2, 3, 4])\n",
+      "(1, [2, 3, 4, 5])\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "a = (1, [2, 3])\n",
+    "b = a\n",
+    "a[1].append(4)\n",
+    "print(a)\n",
+    "b[1].append(5)\n",
+    "print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, [2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, [2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3}\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 3\n",
+      "0 2\n",
+      "0 1\n",
+      "1 3\n",
+      "1 2\n",
+      "2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "###What will be the output of the following code snippet?\n",
+    "for i in range(3):\n",
+    "    for j in range(3, 0, -1):\n",
+    "        if i == j:\n",
+    "            break\n",
+    "        print(i, j)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****\n",
+      "***\n",
+      "*\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "###What will be the output of the following code?\n",
+    "n = 5\n",
+    "for i in range(n):\n",
+    "    for j in range(i, n):\n",
+    "        print(\"*\", end=\"\")\n",
+    "        if i + j == n - 1:\n",
+    "            break\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i=0, j=1\n",
+      "i=0, j=2\n",
+      "i=1, j=0\n",
+      "i=1, j=2\n",
+      "i=2, j=0\n",
+      "i=2, j=1\n"
+     ]
+    }
+   ],
+   "source": [
+    "###What will be the output of the following code?\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        if i == j:\n",
+    "            continue\n",
+    "        print(f\"i={i}, j={j}\")\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[99, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Given the following code snippet, what will be the output?\n",
+    "def tricky_function(lst):\n",
+    "    lst = lst + [4]\n",
+    "    lst[0] = 99\n",
+    "    return lst\n",
+    "\n",
+    "my_list = [1, 2, 3]\n",
+    "new_list = tricky_function(my_list)\n",
+    "print(my_list)\n",
+    "print(new_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[99, 2, 3, 4]\n",
+      "[99, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def tricky_function(lst):\n",
+    "    lst.append(4)\n",
+    "    lst[0] = 99\n",
+    "    return lst\n",
+    "\n",
+    "my_list = [1, 2, 3]\n",
+    "new_list = tricky_function(my_list)\n",
+    "print(my_list)\n",
+    "print(new_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, [2, 3, 4, 5])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Given the following code, what will be the output?\n",
+    "a = (1, [2, 3])\n",
+    "b = a\n",
+    "a[1].append(4)\n",
+    "b[1].append(5)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 6, 7, (4, 5)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Given the following code, what will be the output?\n",
+    "s = {1, 2, 3}\n",
+    "s.add((4, 5))\n",
+    "s.remove(1)\n",
+    "s.update([6, 7])\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> 2 -> 3 -> None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "        self.next = None\n",
+    "\n",
+    "class SinglyLinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "\n",
+    "    def append(self, value):\n",
+    "        if not self.head:\n",
+    "            self.head = Node(value)\n",
+    "        else:\n",
+    "            current = self.head\n",
+    "            while current.next:\n",
+    "                current = current.next\n",
+    "            current.next = Node(value)\n",
+    "\n",
+    "    def print_list(self):\n",
+    "        current = self.head\n",
+    "        while current:\n",
+    "            print(current.value, end=\" -> \")\n",
+    "            current = current.next\n",
+    "        print(\"None\")\n",
+    "\n",
+    "ll = SinglyLinkedList()\n",
+    "ll.append(1)\n",
+    "ll.append(2)\n",
+    "ll.append(3)\n",
+    "ll.print_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1=2=3=4=5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1, 2, 3, 4, 5, sep = \"=\")"
+   ]
   }
  ],
  "metadata": {
